--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,8 @@ img { max-width: 100%; }
 /***** Footer *****/
 
 footer {
-	margin-top: 60px;
+    margin-top: 60px;
+    margin-left: 550px;
 	padding: 20px 0 15px 0;
 }
 
@@ -143,7 +144,7 @@ footer {
 	font-size: 14px;
     line-height: 32px;
     color: #fff;
-    text-align: left;
+    text-align: center;
 }
 
 .footer-copyright a { color: #fff; border-bottom: 1px dotted #fff; }
